# flutter-ogg-to-aac

./: CHANGELOG.md  LICENSE  NOTICE  README.md  android.json  ios.json  plugin_guide.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/cpp/: CMakeLists.txt  native-audio-converter.cpp
android/src/main/cpp/includes/ogg/: Makefile.am  Makefile.in  config_types.h.in  ogg.h  os_types.h
android/src/main/cpp/includes/vorbis/: Makefile.am  Makefile.in  codec.h  vorbisenc.h  vorbisfile.h
android/src/main/cpp/libs/libvorbis/: codec.h
android/src/main/kotlin/com/nmtuong/flutter_ogg_to_aac/: FlutterOggToAacPlugin.kt
example/: README.md  pubspec.yaml
example/android/: gradle.properties
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/integration_test/: aac_deep_analysis_test.dart  aac_detailed_test.dart  aac_format_test.dart  aac_playback_test.dart  adts_header_test.dart  app_test.dart  file_comparison_test.dart  fix_aac_file_test.dart  plugin_integration_test.dart  plugin_test.dart
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_ogg_to_aac.podspec
ios/Classes/: FlutterOggToAac-Bridging-Header.h  FlutterOggToAacPlugin.h  FlutterOggToAacPlugin.m  FlutterOggToAacPlugin.swift  OggConverter.h  OggConverter.mm  OggConverterBridge.h  OggConverterBridge.m  OggVorbisDecoder.h  OggVorbisDecoder.m
ios/Libraries/include/: module.modulemap
ios/Libraries/include/vorbis/: vorbisenc.h  vorbisfile.h
lib/: flutter_ogg_to_aac.dart  flutter_ogg_to_aac_method_channel.dart  flutter_ogg_to_aac_platform_interface.dart
ogg_to_aac_converter/: README.md  pubspec.yaml
ogg_to_aac_converter/android/src/main/cpp/: CMakeLists.txt  native-audio-converter.cpp
ogg_to_aac_converter/ios/Classes/: OggToAacConverterPlugin.swift
ogg_to_aac_converter/lib/: ogg_to_aac_converter.dart  ogg_to_aac_converter_method_channel.dart  ogg_to_aac_converter_platform_interface.dart
test/: README.md  flutter_ogg_to_aac_integration_test.dart  flutter_ogg_to_aac_method_channel_test.dart  flutter_ogg_to_aac_test.dart  performance_test.dart
(+4 files in other folders)
